--- a/start/css/main.css
+++ b/start/css/main.css
@@ -1,18 +1,16 @@
-
-
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
-  height:100%;
-  width:100%;;
+  height: 100%;
+  width: 100%;
 }
-#main{
-  position:absolute;
-  width:1920px;
-  height:1080px;
-} 
+#main {
+  position: absolute;
+  width: 1920px;
+  height: 1080px;
+}
 #qna {
-
   /* margin-top: 5rem; */
   /* margin-bottom:5rem;
   padding-top: 10rem; */
@@ -37,41 +35,37 @@ html, body {
 } */
 
 .st-btn1 {
-  font-family: 'BM JUA_OTF';
+  font-family: "BM JUA_OTF";
   text-align: center;
   align-items: center;
-  width:200px;
-  
-  border-radius:10px;
+  width: 200px;
+
+  border-radius: 10px;
   font-size: 30px;
   font-weight: 700;
   color: #ffffff;
-  background: #1D2EFF;
+  background: #1d2eff;
   border-radius: 10px;
-
 }
-.stbtn{
-  
-  font-family: 'Apple SD Gothic Neo';
+.stbtn {
+  font-family: "Apple SD Gothic Neo";
   font-style: normal;
   font-weight: 800;
   font-size: 32px;
   line-height: 38px;
   text-align: center;
-  
-  color: #FFFFFF;
-  
-  background: #1D2EFF;
+  padding: auto;
+  color: #ffffff;
+  display: inline-block;
+  background: #1d2eff;
   border-radius: 10px;
- 
-    position: absolute;
-    width: 170px;
-    height: 70px;
-    left: 875px;
-    top: 870px;
-  
-}
-.stbtn:hover{
-  color:#FFFFFF;
-}
 
+  position: absolute;
+  width: 160px;
+  height: 80px;
+  left: 875px;
+  top: 870px;
+}
+.stbtn:hover {
+  color: #ffffff;
+}
